--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>We're really glad you're here</h1>
+    <h1>Will this be different?</h1>
     <div id="content">
 
     </div>
