--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,14 @@
     <title>Home</title>
 </head>
 <body>
+{#    {% macro input(name, value='', type='text', size=20) -%}#}
+{#        <input type="{{ type }}" name="{{ name }}" value="{{#}
+{#            value|e }}" size="{{ size }}">#}
+{#    {%- endmacro %}#}
     <h1>Will this be different?</h1>
     <div id="content">
-
+    <p>{{ input('username') }}</p>
+    <p>{{ input('password', type='password') }}</p>
     </div>
     <script type="text/javascript">
         document.getElementById("content").innerHTML = "Goodbye world!" ;
