--- a/templates/home.html
+++ b/templates/home.html
@@ -12,22 +12,22 @@
     <h1>Will this be different?</h1>
     <div id="content">
 
-        <h2>Login</h2>
-  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="{{ url_for('login') }}" method=post>
-    <dl>
-      <dt>Username:
-      <dd><input type=text name=username>
-      <dt>Password:
-      <dd><input type=password name=password>
-      <dd><input type=submit value=Login>
-    </dl>
-  </form>
+{#        <h2>Login</h2>#}
+{#  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}#}
+{#  <form action="{{ url_for('login') }}" method=post>#}
+{#    <dl>#}
+{#      <dt>Username:#}
+{#      <dd><input type=text name=username>#}
+{#      <dt>Password:#}
+{#      <dd><input type=password name=password>#}
+{#      <dd><input type=submit value=Login>#}
+{#    </dl>#}
+{#  </form>#}
 {#    <p>{{ input('username') }}</p>#}
 {#    <p>{{ input('password', type='password') }}</p>#}
     </div>
     <script type="text/javascript">
-        document.getElementById("content").innerHTML = "Goodbye world!" ;
+        document.getElementById("content").innerHTML = "Goodbye world 2!" ;
     </script>
 </body>
 </html>
